# pointimg

./: .gitignore  ARCHITECTURE.fr.md  ARCHITECTURE.md  CONTRIBUTING.fr.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.fr.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: filter.rs  main.rs
src/gui/: main.rs
